// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> should match snapshot 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  height: 52px;
  width: 100%;
  padding: 16px 16px 16px 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c1:hover {
  border-color: #6B6B78;
}

.c2 {
  width: 100%;
  padding: 0;
  background-color: transparent;
  border: none;
  font-family: Rubik;
  font-size: 14px;
  line-height: 20px;
  cursor: pointer;
}

.c2,
.c2::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2,
.c2::-moz-placeholder {
  color: #6B6B78;
}

.c2,
.c2:-ms-input-placeholder {
  color: #6B6B78;
}

.c2,
.c2::placeholder {
  color: #6B6B78;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-right: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c4 {
  fill: #6B6B78;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    class="c0"
    role="combobox"
  >
    <div
      class="c1"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-0-label"
        autocomplete="off"
        class="c2"
        id="downshift-0-input"
        placeholder="Find an activity to love"
        readonly=""
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="open menu"
        class="c3"
        data-toggle="true"
        role="button"
        type="button"
      >
        <svg
          class="c4"
          height="20"
          width="20"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> should match snapshot when disabled 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  height: 52px;
  width: 100%;
  padding: 16px 16px 16px 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
  border-color: #F5F5FA;
}

.c2 {
  width: 100%;
  padding: 0;
  background-color: transparent;
  border: none;
  font-family: Rubik;
  font-size: 14px;
  line-height: 20px;
  cursor: not-allowed;
}

.c2,
.c2::-webkit-input-placeholder {
  color: #6B6B78;
  color: #D7D7E0;
}

.c2,
.c2::-moz-placeholder {
  color: #6B6B78;
  color: #D7D7E0;
}

.c2,
.c2:-ms-input-placeholder {
  color: #6B6B78;
  color: #D7D7E0;
}

.c2,
.c2::placeholder {
  color: #6B6B78;
  color: #D7D7E0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-right: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: not-allowed;
}

.c4 {
  fill: #6B6B78;
  fill: #D7D7E0;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    class="c0"
    role="combobox"
  >
    <div
      class="c1"
      disabled=""
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-1-label"
        autocomplete="off"
        class="c2"
        disabled=""
        id="downshift-1-input"
        placeholder="Find an activity to love"
        readonly=""
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="open menu"
        class="c3"
        data-toggle="true"
        disabled=""
        role="button"
        type="button"
      >
        <svg
          class="c4"
          disabled=""
          height="20"
          width="20"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> should match snapshot when full 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 100%;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  height: 52px;
  width: 100%;
  padding: 16px 16px 16px 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c1:hover {
  border-color: #6B6B78;
}

.c2 {
  width: 100%;
  padding: 0;
  background-color: transparent;
  border: none;
  font-family: Rubik;
  font-size: 14px;
  line-height: 20px;
  cursor: pointer;
}

.c2,
.c2::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2,
.c2::-moz-placeholder {
  color: #6B6B78;
}

.c2,
.c2:-ms-input-placeholder {
  color: #6B6B78;
}

.c2,
.c2::placeholder {
  color: #6B6B78;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-right: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c4 {
  fill: #6B6B78;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-2-label"
    class="c0"
    role="combobox"
  >
    <div
      class="c1"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-2-label"
        autocomplete="off"
        class="c2"
        id="downshift-2-input"
        placeholder="Find an activity to love"
        readonly=""
        value=""
      />
      <button
        aria-haspopup="true"
        aria-label="open menu"
        class="c3"
        data-toggle="true"
        role="button"
        type="button"
      >
        <svg
          class="c4"
          height="20"
          width="20"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> should match snapshot when has a selected value 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  height: 52px;
  width: 100%;
  padding: 16px 16px 16px 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
  border-color: #F5F5FA;
  border-color: #231B22;
}

.c2 {
  width: 100%;
  padding: 0;
  background-color: transparent;
  border: none;
  font-family: Rubik;
  font-size: 14px;
  line-height: 20px;
  cursor: not-allowed;
}

.c2,
.c2::-webkit-input-placeholder {
  color: #6B6B78;
  color: #231B22;
  color: #D7D7E0;
}

.c2,
.c2::-moz-placeholder {
  color: #6B6B78;
  color: #231B22;
  color: #D7D7E0;
}

.c2,
.c2:-ms-input-placeholder {
  color: #6B6B78;
  color: #231B22;
  color: #D7D7E0;
}

.c2,
.c2::placeholder {
  color: #6B6B78;
  color: #231B22;
  color: #D7D7E0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-right: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: not-allowed;
}

.c4 {
  fill: #6B6B78;
  fill: #D7D7E0;
  fill: #D8385E;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-3-label"
    class="c0"
    role="combobox"
  >
    <div
      class="c1"
      disabled=""
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-3-label"
        autocomplete="off"
        class="c2"
        disabled=""
        id="downshift-3-input"
        placeholder="Find an activity to love"
        readonly=""
        value="Swimming"
      />
      <button
        aria-haspopup="true"
        aria-label="open menu"
        class="c3"
        data-toggle="true"
        disabled=""
        role="button"
        type="button"
      >
        <svg
          class="c4"
          disabled=""
          height="20"
          width="20"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> should match snapshot with error 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 4px;
  color: #FF874C;
}

.c6 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: currentColor;
  font-size: 12px;
}

.c0 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 320px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  height: 52px;
  width: 100%;
  padding: 16px 16px 16px 16px;
  background-color: #FFFFFF;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #FF874C;
  border-color: #231B22;
}

.c1:hover {
  border-color: #6B6B78;
}

.c2 {
  width: 100%;
  padding: 0;
  background-color: transparent;
  border: none;
  font-family: Rubik;
  font-size: 14px;
  line-height: 20px;
  cursor: pointer;
}

.c2,
.c2::-webkit-input-placeholder {
  color: #6B6B78;
  color: #231B22;
}

.c2,
.c2::-moz-placeholder {
  color: #6B6B78;
  color: #231B22;
}

.c2,
.c2:-ms-input-placeholder {
  color: #6B6B78;
  color: #231B22;
}

.c2,
.c2::placeholder {
  color: #6B6B78;
  color: #231B22;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-right: 16px;
  border: none;
  outline: none;
  background-color: transparent;
  cursor: pointer;
}

.c4 {
  fill: #6B6B78;
  fill: #D8385E;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-4-label"
    class="c0"
    role="combobox"
  >
    <div
      class="c1"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-4-label"
        autocomplete="off"
        class="c2"
        id="downshift-4-input"
        placeholder="Find an activity to love"
        readonly=""
        value="Swimming"
      />
      <button
        aria-haspopup="true"
        aria-label="open menu"
        class="c3"
        data-toggle="true"
        role="button"
        type="button"
      >
        <svg
          class="c4"
          height="20"
          width="20"
        />
      </button>
    </div>
    <div
      class="c5"
    >
      <span
        class="c6"
      >
        Please, select one activity
      </span>
    </div>
  </div>
</div>
`;
